update api v2,add references part

--- a/docs/v2.md
+++ b/docs/v2.md
@@ -319,7 +319,26 @@ POST,PUT,PATHCH 请求发生验证错误时，将会返回 `422 Unprocessable En
 
 为了更好的接口体验，我们错误代码的设计，将参考较为完善的微博开发平台 API，[点击查看微博API的错误码](http://open.weibo.com/wiki/Error_code "http://open.weibo.com/wiki/Error_code")。
 
-	
+## References ##
+
+1. RESTful 最佳实践
+	- [http://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api](http://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api) （英文原文）
+	- [http://blog.jobbole.com/41233/](http://blog.jobbole.com/41233/) （中文译文1）
+	- [http://www.oschina.net/translate/best-practices-for-a-pragmatic-restful-api](http://www.oschina.net/translate/best-practices-for-a-pragmatic-restful-api) （中文译文2）
+1. 好RESTful API的设计原则
+	- [ http://codeplanet.io/principles-good-restful-api-design/]( http://codeplanet.io/principles-good-restful-api-design/) （英文原文）
+	- [http://www.cnblogs.com/moonz-wu/p/4211626.html](http://www.cnblogs.com/moonz-wu/p/4211626.html) （中文译文）
+6. Some REST best practices [https://bourgeois.me/rest/](https://bourgeois.me/rest/)
+1. 理解RESTful架构（阮一峰） [http://www.ruanyifeng.com/blog/2011/09/restful.html](http://www.ruanyifeng.com/blog/2011/09/restful.html)
+1. RESTful API 设计指南（阮一峰） [http://www.ruanyifeng.com/blog/2014/05/restful_api.html](http://www.ruanyifeng.com/blog/2014/05/restful_api.html)
+1. RESTful Web Services中文版 [http://book.douban.com/subject/3094230/ ](http://book.douban.com/subject/3094230/ )
+1. RESTful Web Services Cookbook中文版 [http://book.douban.com/subject/6837645/](http://book.douban.com/subject/6837645/) 
+1. RESTful Web APIs中文版 [http://book.douban.com/subject/25909247/ ](http://book.douban.com/subject/25909247/ )
+2. Github API v3 [https://developer.github.com/v3/ ](https://developer.github.com/v3/ )
+3. Mailgun Documentation [https://documentation.mailgun.com/ ](https://documentation.mailgun.com/ )
+4. Enchant REST API [http://dev.enchant.com/api/v1 ](http://dev.enchant.com/api/v1 )
+5. 微博 API [http://open.weibo.com/wiki/Error_code](http://open.weibo.com/wiki/Error_code)
+
 ## Whys ##
 
 在编写此文档时，我觉得直接使用英文更能直接说明我们的目的，所以这里的标题大多直接使用了英文，这对了解REST的开发者也是友好的。
