--- a/docs/v2.md
+++ b/docs/v2.md
@@ -338,6 +338,7 @@ POST,PUT,PATHCH 请求发生验证错误时，将会返回 `422 Unprocessable En
 3. Mailgun Documentation [https://documentation.mailgun.com/ ](https://documentation.mailgun.com/ )
 4. Enchant REST API [http://dev.enchant.com/api/v1 ](http://dev.enchant.com/api/v1 )
 5. 微博 API [http://open.weibo.com/wiki/Error_code](http://open.weibo.com/wiki/Error_code)
+6. 最佳实践：更好的设计你的 REST API [http://www.ibm.com/developerworks/cn/web/1103_chenyan_restapi/](http://www.ibm.com/developerworks/cn/web/1103_chenyan_restapi/)
 
 ## Whys ##
 
